fixed the problem